myteo/test/analyze/type_check/this/this_type.myte
module test

trait Trait {
  fun test() {
    // Intentional failure - print type
    (this: Unit);
  }
}

type Type (Unit)
methods Type {
  fun test() {
    // Intentional failure - print type
    (this: Unit);

    // Success
    this == (Type (()));
  }
}

fun main() {}